nginx/deploy/deployment_ingress_resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: Ingress-resource
  labels:
    name: nginx-ingress     

spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /app1
        backend:
          service:
            name: app1-svc
            port:
              number: 8000
      - pathType: Prefix
        path: /app2
        backend:
          service:
            name: app2-svc
            port:
              number: 8000
